[Cleanup] Clean up residual warnings, deprecation suppressions, and unused fields